--- a/xiaobao/matrix/checks.yml
+++ b/xiaobao/matrix/checks.yml
@@ -1,3 +1,6 @@
+
+# 更新日期：2022-10-07，请确认是否为最新版配置文件。
+
 ####Matrix配置-checks.yml###################################################
 #
 # 您好，欢迎使用 Matrix 反作弊，这是 checks.yml，用于定义每个检查的设置和行为。
